Apply Kotlin compiler workaround for JDK16 in build-init
Build init for Kotlin projects will generate a gradle.properties with a workaround
property that allows Kotlin JVM plugin to compile Kotlin on JDK16.